--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "i18next": "^25.8.11",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.5.12",
@@ -52,6 +53,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^16.5.4",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "resend": "^4.7.0",
